tests/derivation/core/trivial 004-neg/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Target type of a derived `Gen` cannot be a `Gen`

DerivedGen:1
 09 | Show (Gen em x) where
 10 |   show _ = "a generator"
 11 | 
 12 | checkedGen : Fuel -> (em : _) -> (a : Type) -> Gen MaybeEmpty $ Gen em a
 13 | checkedGen = deriveGen
                   ^^^^^^^^^

